syntax = "proto3";
enum FingerStatusSampleRate
{
	RATE_UNUSED = 0;
	RATE_1MS = 1;
	RATE_2MS = 2;
	RATE_5MS = 5;
	RATE_10MS = 10;
	RATE_20MS = 20;
	RATE_50MS = 50;
	RATE_100MS = 100;
	RATE_200MS = 200;
	RATE_500MS = 500;
	RATE_1000MS = 1000;
	UPON_EVENT = 16382;
	RATE_OFF = 16383;	//max value if encode in 2 bytes, base-128
}

message FingerStatus
{
	/**
		* positions:
		* 0 ~ 100 for each finger. 0 for fully open, 100 for fully close
		*/
	bytes positions = 1;
	/**
		* speeds:
		* -100 ~ +100 for each finger. 0 for stop, positive number for close finger,
		* negative number for open finger.
		*/
	bytes speeds = 2;
	/**
		* currents:
		* 0 ~ 100 for each finger. Fraction of max motor current, absolute number.
		* The max motor current is 600mA, in a word, 100.
		*/
	bytes currents = 3;
}
