syntax = "proto3";
import "main_mtr_shared.proto";
import "stark_common.proto";

//Motor Command
message MtrCmd
{
	enum CtrlMode
	{
		UNUSED = 0;
		POSITION = 1;
		SPEED = 2;
		CURRENT = 3;
		SUBSCRIBE = 127;
	}
	CtrlMode ctrl_mode = 1;
	FingerStatus expect_status = 2;
	FingerStatusSampleRate sample_rate = 3;
	bool lock_fingers = 4;
}

//LED Command
message LedCmd
{
	LedMode set_mode = 1;	//required field
	LedColor set_color = 2;	//optional field, and if = 0 mean unchanged
}

// Command Message: main_board --> driver_board
message U_MainToMtr
{
	MtrCmd mtr_cmd = 2;
	LedCmd led_cmd = 3;
}
